--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -1,12 +1,8 @@
-
 #root {
     display: flex;
     flex-direction: column;
     min-height: 100vh; /* 브라우저 높이에 맞게 확장 */
-}
-
-.main-content {
-    flex-grow: 1; /* 남는 공간을 채우도록 설정 */
+    background-color: #B6C0D3;
 }
 
 .footer {
