--- a/src/pages/about/AboutPage.css
+++ b/src/pages/about/AboutPage.css
@@ -168,9 +168,20 @@
   letter-spacing: 2px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
+.info-text h3 {
+  font-size: 4rem;
+  font-weight: bold;
+  color: #f0f0f0;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  line-height: 1.2;
+  word-break: keep-all;
+}
 
 /* 반응형 디자인 */
-@media (max-width: 900px) {
+@media (max-width: 800px) {
   .info-content {
     flex-direction: column;
     align-items: center;
@@ -179,27 +190,9 @@
   }
 
   .info-label {
-    width: 100px;
-    height: 100px;
-    font-size: 1.4rem;
-  }
-
-  .info-text {
-    font-size: 1.2rem;
-    line-height: 1.8;
-  }
-
-  .info-image img {
-    max-width: 300px;
-  }
-}
-
-@media (min-width: 901px) and (max-width: 1175px) {
-  .info-content {
-    flex-direction: row;
-    align-items: flex-start;
-    text-align: left;
-    gap: 40px;
+    width: 90px;
+    height: 90px;
+    font-size: 1.3rem;
   }
 
   .info-text {
@@ -207,43 +200,98 @@
     line-height: 1.7;
   }
 
-  .info-text h2 {
-    font-size: 1.8rem;
-  }
-
-  .info-text h3 {
-    font-size: 1.3rem;
-  }
-
-  .info-text p {
-    font-size: 1.1rem;
-  }
-
   .info-image img {
-    max-width: 350px;
+    max-width: 280px;
   }
 }
 
-@media (min-width: 1176px) {
+@media (min-width: 801px) and (max-width: 1100px) {
   .info-content {
     flex-direction: row;
     align-items: flex-start;
     text-align: left;
-    gap: 50px;
+    gap: 35px;
+  }
+
+  .info-text {
+    font-size: 1rem;
+    line-height: 1.6;
+  }
+
+  .info-text h2 {
+    font-size: 1.7rem;
+  }
+
+  .info-text h3 {
+    font-size: 3.5rem;
+  }
+
+  .info-text p {
+    font-size: 1rem;
   }
 
   .info-image img {
-    max-width: 400px;
+    max-width: 330px;
+  }
+}
+
+@media (min-width: 1101px) {
+  .info-content {
+    flex-direction: row;
+    align-items: flex-start;
+    text-align: left;
+    gap: 45px;
+  }
+  .info-text {
+    font-size: 1rem;
+    line-height: 1.6;
+  }
+
+  .info-text h2 {
+    font-size: 1.7rem;
+  }
+
+  .info-text h3 {
+    font-size: 4rem;
+  }
+
+  .info-text p {
+    font-size: 1.2rem;
+  }
+
+  .info-image img {
+    max-width: 380px;
+  }
+}
+
+@media (max-width: 600px) {
+  .info-text h3 {
+    font-size: 1.5rem;
+    line-height: 1.2;
+  }
+
+  .info-text {
+    padding: 10px;
+    text-align: center;
+  }
+
+  .info-text p {
+    font-size: 1rem;
+  }
+
+  .info-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .info-image img {
+    max-width: 190px;
   }
 }
 
 .info-image img {
   width: 100%;
   height: auto;
-  max-width: 450px;
+  max-width: 600px;
   transition: all 0.3s ease;
-}
-
-.info-image img:hover {
-  transform: scale(1.05);
 }
