--- a/src/pages/about/AboutPage.css
+++ b/src/pages/about/AboutPage.css
@@ -295,3 +295,39 @@
   max-width: 600px;
   transition: all 0.3s ease;
 }
+@media (max-width: 500px) {
+  .info-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+  }
+
+  .info-label {
+    width: 70px;
+    height: 70px;
+    font-size: 1rem;
+  }
+
+  .info-text {
+    font-size: 0.9rem;
+    line-height: 1.5;
+    padding: 5px;
+  }
+
+  .info-text h2 {
+    font-size: 1.5rem;
+  }
+
+  .info-text h3 {
+    font-size: 1.2rem;
+  }
+
+  .info-text p {
+    font-size: 0.9rem;
+  }
+
+  .info-image img {
+    max-width: 200px;
+  }
+}
