--- a/src/pages/community/communityComponent/PostItem.css
+++ b/src/pages/community/communityComponent/PostItem.css
@@ -59,38 +59,40 @@ li.post-titles {
   flex: 1;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  -webkit-line-clamp: 2;
-  -moz-line-clamp: 2;
-  line-clamp: 2;
-  -webkit-box-orient: vertical;
-  -moz-box-orient: vertical;
-  box-orient: vertical;
-  white-space: normal;
-  line-height: 1.4;
+  white-space: nowrap; 
 }
 
 .post_author {
   font-size: 13px;
   color: #666d75;
   flex-shrink: 0;
-  margin-right:30px;
+ 
   text-align: center;
   width: 130px;
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
+  gap: 8px;
+}
+
+.nickname-container {
+  max-width: 90px;  /* 기본 너비 설정 */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  direction: ltr;
 }
 
 .post-content-wrapper .post-tags {
-  display: flex !important;
+  display: inline !important;
   gap: 4px !important;
-  flex-wrap: wrap !important;
+  flex-wrap: nowrap !important;
   margin: 0 !important;
   padding: 0 !important;
   flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .post-content-wrapper .tag-item {
@@ -102,12 +104,17 @@ li.post-titles {
   text-decoration: none !important;
   background: none !important;
   border: none !important;
+  white-space: nowrap; 
 }
 
 .tags_wrap{
   width: 500px ;
   margin-left: 70px;
-  text-align: center !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: left !important;
+  display: inline-block;
 }
 
 .post-info-wrapper {
@@ -125,8 +132,9 @@ li.post-titles {
   color: #98a8b9;
   font-size: 13px;
   align-items: center;
-  margin-right:30px;
-
+  margin-right: 30px;
+  white-space: nowrap;  
+  flex-shrink: 0; 
 }
 
 /* .post-stats span {
@@ -154,12 +162,10 @@ li.post-titles {
 }
 
 .member_badge_img{
-  display: inline-block;
   width: 25px;
   height: 25px;
   object-fit: contain;
-  margin-left:8px;
-  margin-top:-3px;
+  flex-shrink: 0;
 }
 
 /* 반응형 스타일 */
@@ -168,8 +174,9 @@ li.post-titles {
     padding: 12px;
     margin: 0 auto 8px;
     width: 95%;
+    transform: scale(0.9);
   }
-
+ 
   .post-title {
     font-size: 14px;
   }
@@ -187,6 +194,111 @@ li.post-titles {
     flex-direction: row;
     align-items: center;
   }
+
+  /* 새로운 레이아웃을 위한 스타일 추가 */
+  .post-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap:0px;
+  }
+
+  .post-content-wrapper .tag-item {
+    margin-left: 10px !important;  /* 35px에서 0으로 변경 */
+    margin-right: 8px !important;  /* 태그 사이 간격 */
+    padding: 0 !important;
+  }
+
+  .category-date-line {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    margin-bottom: 0px;
+  }
+
+  .title-author-line {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left:10px;
+    width: 100%;
+  }
+
+  .subcategory {
+    width: auto;
+    font-size: 16px;
+    
+  }
+
+  li.post-titles {
+    width: auto;
+    flex: 1;
+    text-align: left;  
+  }
+
+  .post_author {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .post-date {
+    margin-right: 0;
+  }
+
+  .tags_wrap{
+    margin-left:0px;
+    width:auto;
+    transform: scale(0.9);
+  }
+}
+
+@media screen and (min-width: 300px)  and (max-width: 500px){
+  .post-item{
+    padding:12px;
+  }
+  .subcategory{
+    font-size:14px;
+  }
+  .post-date{
+    font-size: 10px;
+  }
+  .post-titles{
+   transform: scale(0.9);
+   padding: 0px;
+  }
+  .nickname-container{
+    font-size: 11px;
+  }
+  .post-status{
+    transform: scale(0.9);
+    margin-right: 3px;
+  }
+  .post_author{
+    padding:5px;
+    gap:0px;
+  }
+  .tags_wrap{
+    transform: scale(0.8);
+  }
+  .title-author-line{
+    padding:0px;
+  }
+  .post-content-wrapper .tag-item {
+    margin-left: 0px !important;  /* 35px에서 0으로 변경 */
+    margin-right: 4px !important;  /* 태그 사이 간격 */
+  }
+
+  .post-date{
+    padding:5px;
+  }
+
+  @media screen and (max-width:400px) {
+    .nickname-container{
+      max-width: 70px;
+    }
+    
+  }
+  
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
@@ -194,6 +306,28 @@ li.post-titles {
     max-width: 1200px;
     width: 95%;
     margin: 0 auto 8px;
+    transform: scale(0.9);
+  }
+  .subcategory{
+    font-size: 18px;
+  }
+  .category-date-line{
+    padding:0px;
+  }
+  li.post-titles {
+    width: 350px;
+  }
+
+  li.post-date{
+    margin-right: 0px;
+    font-size:12px;
+  }
+  .tag-item{
+    margin-left: 8px;
+  }
+
+  .post-status{
+    margin-right: 20px;
   }
 }
 
@@ -203,4 +337,5 @@ li.post-titles {
     width: 95%;
     margin: 0 auto 8px;
   }
+  
 }
