--- a/src/pages/community/communityComponent/RecommendedPostsItem.css
+++ b/src/pages/community/communityComponent/RecommendedPostsItem.css
@@ -21,7 +21,7 @@
 }
 
 .post-item.recommended .post-content-wrapper {
-  padding: 10px;
+  padding: 5px;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -47,6 +47,7 @@
   width: 180px;          /* 가로폭 제한 추가 */
   display: block;        /* inline에서 block으로 변경 */
   padding: 0 10px 0 0;
+  margin-top: 10px;
 }
 
 /* .post-item.recommended .post-tags {
@@ -140,6 +141,3 @@
   
 }
 
-@media screen and (min-width: 769px) {
-  
-}
