--- a/src/pages/community/communityComponent/Pagination.css
+++ b/src/pages/community/communityComponent/Pagination.css
@@ -3,15 +3,15 @@
   }
   
   .pagination .page-link {
-    color: #0d6efd;
+    color: #333C4D;
     cursor: pointer;
     padding: 8px 12px;
     margin: 0 2px;
   }
   
   .pagination .page-item.active .page-link {
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+    background-color: #ABC7FF;
+    border-color: #ABC7FF;
     color: white;
   }
   
