fix:뱃지 모달 반응형 수정

--- a/src/pages/badge/badgeModalComponents/BadgeModalTabs.css
+++ b/src/pages/badge/badgeModalComponents/BadgeModalTabs.css
@@ -35,3 +35,12 @@
   .tab-button:hover {
     color: #000;
   }
+
+  @media screen and (min-width:300px) and (max-width:480px) {
+    .badge-modal-tabs{
+      gap: 10px;
+    }
+    .tab-button{
+      padding:5px 10px;
+    }
+  }
