fix:추천게시글 제목 수정

--- a/src/pages/community/communityComponent/RecommendedPostsItem.css
+++ b/src/pages/community/communityComponent/RecommendedPostsItem.css
@@ -29,7 +29,7 @@
 }
 
 .post-item.recommended .re_subcategory {
-  font-size: 14px;
+  font-size: 0.85em;
   color: #ABC7FF;
   font-weight: 600;
   margin-bottom: 4px;
