fix:커뮤니티 여백 조정

--- a/src/pages/community/communityComponent/RecommendedPostsItem.css
+++ b/src/pages/community/communityComponent/RecommendedPostsItem.css
@@ -119,7 +119,7 @@
 
 .list_title{  
   padding-left: 16px;
-  width: 1150px;
+  max-width: 1150px;
   height:50px;
   margin: 80px auto 10px;
   font-weight: bold; 
