--- a/src/pages/community/CommunityPage.css
+++ b/src/pages/community/CommunityPage.css
@@ -88,7 +88,7 @@ body{
   margin:0 auto;
   padding-left: 16px;
   padding-top: 30px;
-  width: 1200px;
+  max-width: 1200px;
   height: 20px;
   font-weight: bold;
 
