--- a/src/pages/community/communityComponent/Pagination.css
+++ b/src/pages/community/communityComponent/Pagination.css
@@ -1,5 +1,6 @@
 .pagination {
     margin-bottom: 2rem;
+    max-width: 100vw;
   }
   
   .pagination .page-link {
@@ -19,4 +20,34 @@
     color: #6c757d;
     cursor: not-allowed;
     background-color: #f8f9fa;
+  }
+
+  @media screen and (max-width:1024px) {
+    .pagination{
+      transform: scale(0.9);
+    }
+  }
+
+  @media screen and (max-width:768px) {
+    .pagination{
+      transform: scale(0.8);
+    }
+  }
+
+  @media screen and (max-width:500px) {
+    .pagination{
+      transform: scale(0.7);
+    }
+  }
+
+  @media screen and (max-width:400px) {
+    .pagination{
+      transform: scale(0.6);
+    }
+  }
+
+  @media screen and (max-width:350px) {
+    .pagination{
+      transform: scale(0.5);
+    }
   }
